# aruco_robot_localization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
app/: CMakeLists.txt  detect_aruco_from_stream.cpp  detect_aruco_marker.cpp  generate_marker.cpp  localization.cpp
app/camera calibration/: CMakeLists.txt  calibrate_camera.cpp
cmake/: ArucoLocalizationConfig.cmake.in  ArucoLocalizationConfigVersion.cmake.in  Config.cmake.in  read_package_version.cmake
examples/: CMakeLists.txt  get_position.cpp
include/: arucolocalization.hpp  cmdoptionparser.hpp  read_save_camera_parameters.hpp  sharedmemory.hpp
source/: CMakeLists.txt
source/include/: arucolocalization.h
source/lib/: CMakeLists.txt  arucolocalization.cpp
source/tests/: CMakeLists.txt  main_test.cpp
src/: CMakeLists.txt  arucolocalization.cpp  arucolocalization.hpp
test/: CMakeLists.txt  camera_params.json  global_coordinates_test.cpp
test/test_frames/: frame_coordinate.json
tests/: CMakeLists.txt  main_test.cpp
